src/test/ui/error-codes/E0283.stderr
error[E0283]: type annotations needed
  --> $DIR/E0283.rs:30:21
   |
LL |     let cont: u32 = Generator::create();
   |                     ^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: Generator`

error[E0283]: type annotations needed
  --> $DIR/E0283.rs:35:24
   |
LL |     let bar = foo_impl.into() * 1u32;
   |                        ^^^^
   |
note: multiple `impl`s satisfying `Impl: Into<_>` found
  --> $DIR/E0283.rs:17:1
   |
LL | impl Into<u32> for Impl {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: and another `impl` found in the `core` crate:
           - impl<T, U> Into<U> for T
             where U: From<T>;
help: try using a fully qualified path to specify the expected types
   |
LL |     let bar = <Impl as Into<T>>::into(foo_impl) * 1u32;
   |               ++++++++++++++++++++++++        ~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
